@@ -12728,7 +12728,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "onetooneonly",
             "teleport_blocked"
         ],
@@ -12771,7 +12770,7 @@
         ],
         "replace_as": null,
         "source_replace_allowed": true,
-        "category": "needs_invuln-onetooneonly-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-onetooneonly-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Hayner",
         "variationof": null,
@@ -21367,7 +21366,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "teleport_blocked"
         ],
         "hp": 100,
@@ -21412,7 +21410,7 @@
         ],
         "replace_as": null,
         "source_replace_allowed": true,
-        "category": "needs_invuln-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Seifer",
         "variationof": null,
@@ -21489,7 +21487,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "teleport_blocked"
         ],
         "hp": 100,
@@ -21532,7 +21529,7 @@
             "Seifer (4)"
         ],
         "source_replace_allowed": true,
-        "category": "needs_invuln-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Seifer",
         "variationof": null,
@@ -21592,7 +21589,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "teleport_blocked"
         ],
         "hp": 100,
@@ -21634,7 +21630,7 @@
             "Seifer (3)",
             "Seifer (4)"
         ],
-        "category": "needs_invuln-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Seifer",
         "variationof": null,
@@ -21692,7 +21688,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "teleport_blocked"
         ],
         "hp": 100,
@@ -21736,7 +21731,7 @@
             "Seifer (4)"
         ],
         "source_replace_allowed": true,
-        "category": "needs_invuln-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Seifer",
         "variationof": null,
@@ -21794,7 +21789,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "teleport_blocked"
         ],
         "hp": 100,
@@ -21838,7 +21832,7 @@
             "Seifer (4)"
         ],
         "source_replace_allowed": true,
-        "category": "needs_invuln-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Seifer",
         "variationof": null,
@@ -22017,7 +22011,6 @@
         "tags": [
             "needs_invuln",
             "roxas",
-            "sourcemaxhp",
             "onetooneonly",
             "teleport_blocked"
         ],
@@ -22059,7 +22052,7 @@
         ],
         "replace_as": null,
         "source_replace_allowed": true,
-        "category": "needs_invuln-onetooneonly-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-onetooneonly-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Setzer",
         "variationof": null,
@@ -24809,7 +24802,6 @@
         "enmp_index": 157,
         "tags": [
             "roxas",
-            "sourcemaxhp",
             "onetooneonly",
             "needs_invuln",
             "teleport_blocked"
@@ -24855,7 +24847,7 @@
         ],
         "replace_as": null,
         "source_replace_allowed": true,
-        "category": "needs_invuln-onetooneonly-roxas-sourcemaxhp-teleport_blocked",
+        "category": "needs_invuln-onetooneonly-roxas-teleport_blocked",
         "isnightmare": false,
         "parent": "Vivi",
         "variationof": null,
